2008-08-15  Thomas Heller  <theller@python.net>

	* comtypes.client._find_gen_dir() improved (based on a patch and
	helpful thoughts of Stefan Schukat): If comtypes.gen is not a
	directory in the filesystem, or not writeable by users, a new
	directory is created which will cache generated code.  This could
	be the case if comtypes is installed in a directory that has no
	write permissions by the urrent user, if the comtypes package
	resides in a zip-archive or a zipped egg, or if comtypes is used
	in a py2exe'd script.

	'%APPDATA%\<username>\Python\Python<XY>\comtypes_cache'

	is used for a normal Python script, for a py2exe frozen executables
	the directory will be

	'%TEMP%\comtypes_cache\<imagebasename>-<XY>'

	where <imagebasename> is the basename without extension of the
	frozen executable image, and <XY> is the major and minor Python
	version number, '25' for example.

	This makes sure that generated modules will *always* cached in the
	file system.
	
2008-08-13  Thomas Heller  <theller@python.net>

	* comtypes\automation.py: Allow this module to be imported on
	Windows CE.  Using safearrays on Windows CE will not work. I'm not
	sure if they are used much.

2008-08-08  Thomas Heller  <theller@python.net>

	* Implement InterlockedIncrement and InterlockedDecrement for
	win64.

2008-08-07  Thomas Heller  <theller@python.net>

	* Bump version number to 0.5.1

	* comtypes\tools\codegenerator.py: Change the order of the
	interfaces in the _com_interfaces_ and _outgoing_interfaces_ list
	so that the default interface is the first one.  This fixes the
	bug that GetEvents() and ShowEvents() sometimes did use the wrong
	event interface.

2008-08-06  Thomas Heller  <theller@python.net>

	* The repository was moved from python.org to sourceforge.net.
	The svn trunk URL is now:
	https://comtypes.svn.sourceforge.net/svnroot/comtypes/trunk

	The script that extracted the repository is in
	admin/extract_comtypes_repo. The repository structure and the